--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
 lib_deps = 
-	blynkkk/Blynk@^1.3.2
+	bogde/HX711@^0.7.5
+	bblanchon/ArduinoJson@^6.21.4
