Port from NodeMCU to Lolin32

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
+;board = nodemcu-32s
+board = lolin32
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
