--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[env:lolin32]
 platform = espressif32
-;board = nodemcu-32s
 board = lolin32
 framework = arduino
 monitor_speed = 115200
